--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.12",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/cloudflare": "^10.0.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.5.12",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   },
   "engines": {
