--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "preview": "wrangler pages dev ./dist"
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
